src/objects/EBS_Letter_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Config__c</fullName>
        <label>Config</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>DataType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Human readable name</description>
        <label>Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>EBS Letter Fields</label>
</CustomObject>